--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     <div class="testimonial">
         <img src="client2.jpg" alt="Client 2" class="client-image">
         <div class="testimonial-text">
-            <p class="client">Client 2:</p>
+            <p class="client">Client :</p>
             <p class="date">June 10, 2023</p>
             <p>"Highly recommend [Your Name]! They provided a robust and user-friendly system while anticipating our needs every step of the way."</p>
         </div>
